# my_vins

back_end/: CMakeLists.txt
back_end/include/: imu_factor.hpp  imu_factor_v1.hpp  imu_initialization.hpp  local_mapping.hpp  optimization.hpp  optimization_v1.hpp  parameter.hpp  visual_initialization.hpp  visual_measurement_factor.hpp
back_end/src/: back_end_node.cpp  imu_factor.cpp  imu_factor_v1.cpp  local_mapping.cpp  optimization.cpp  optimization_v1.cpp  parameter.cpp  visual_measurement_factor.cpp
back_end/test/: CMakeLists.txt
back_end/test/include/: ceres_test.hpp
back_end/test/src/: ceres_test.cpp  main.cpp
camera_model/: CMakeLists.txt
config/: euroc_config.yaml
synthetic/: CMakeLists.txt  package.xml
synthetic/launch/: euroc.launch
synthetic/src/: CMakeLists.txt  generate_node.cpp  generate_synthetic_data.cpp  generate_synthetic_data.hpp  test_main.cpp
tracking/launch/: euroc.launch
tracking/src/: tracking.cpp  tracking_node.cpp
